[issues/58/id] fix action-1 height on small screen

--- a/src/components/reading-deluxe/style.styl
+++ b/src/components/reading-deluxe/style.styl
@@ -10,8 +10,8 @@
   width: 80%
   max-width: 1000px
   height 15em
-  @media(max-width:1000px)
-    height 13em
+  // @media(max-width:1000px)
+  //   height 13em
   // height 20vw
   align-items: flex-end
   margin: auto
